# phenopacket_tools

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/builder/: mod.rs  phenopacket_builder.rs
src/builder/builders/: diagnosis_builder.rs  disease_builder.rs  expressions.rs  extensions.rs  external_reference_builder.rs  gene_descriptor_builder.rs  genomic_interpretation_builder.rs  individual_builder.rs  interpretation_builder.rs  meta_data_builder.rs  mod.rs  ontology_class_builder.rs  phenotypic_feature_builder.rs  time_elements.rs  variant_interpretation_builder.rs  variation_descriptor_builder.rs  vcf_record_builder.rs  vital_status_builder.rs
src/builders/: builder.rs  expressions.rs  mod.rs  resources.rs  time_elements.rs
src/constants/: allelic_state.rs  disease_stage.rs  laterality.rs  mod.rs  onset.rs  units.rs
src/io/: mod.rs  phenopacket_printer.rs
