[package]
name = "phenopacket_tools"
version = "0.1.0"
edition = "2024"
keywords = ["GA4GH", "Phenopacket Schema", "Human Phenotype Ontology"]
description = "Generate GA4GH phenopackets from tabular data"
license = "BSD-3-Clause"
readme = "README.md"


[lib]
name = "phenopacket_tools"
path = "src/lib.rs"

[[bin]]
name = "p2t"
path  = "bin/p2t.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
derive_more = {version = "2.0.1", features = ["from", "display"]}
serde_json = "1.0.140"
phenopackets = { version = "0.2.2-post1", features = ["serde"]}
clap = { version = "4.5.35", features = ["derive"], optional = true }

[lints.rust]
unsafe_code = "forbid"
unused = "allow" # for initial development only!


[dev-dependencies]
rstest = "0.25.0"